kms/r6xx+: fix tiling and pageflipping harder

Thanks for Michel for final fix.  Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=33738
for r6xx+ asics.  A similar approach for pre-r6xx
asics is pending.

Signed-off-by: Alex Deucher <alexdeucher@gmail.com>